# nshutils

./: README.md  pyproject.toml  test_env_filters.py  test_filter_example.py
.clinerules/: python.md
.cursor/: python.mdc
.github/: copilot-instructions.md
examples/: actsave_filtering.py  actsave_prefix_filtering.py
scripts/: publish.sh
src/nshutils/: __init__.py  __init__.pyi  _display.py  _pytree_type_dynamic.py  _tree_util.py  collections.py  config.py  display.py  logging.py  snoop.py  typecheck.py  util.py
src/nshutils/actsave/: __init__.py  _loader.py  _saver.py
src/nshutils/dbc/: __init__.py  _assert.py  _checkers.py  _config.py  _decorators.py  _globals.py  _lightning.py  _metaclass.py  _recompute.py  _represent.py  _types.py
src/nshutils/debug/: __init__.py  _assert.py  _checkers.py  _config.py  _globals.py  _lightning.py  _metaclass.py  _represent.py  _types.py
src/nshutils/lovely/: __init__.py  _base.py  _monkey_patch_all.py  config.py  jax_.py  numpy_.py  pprint_.py  torch_.py  utils.py
tests/: __init__.py  test_actsave_config_integration.py  test_actsave_filtering.py  test_actsave_integration.py  test_debug.py  test_lovely_patch.py  test_typecheck_debug_integration.py
